# amn-subscriber

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
amn_subscriber/: __init__.py  blueprints.py  filters.py  forms.py  models.py  settings.py  views.py
amn_subscriber/static/: style.css
amn_subscriber/templates/: admin.html  base.ex.html  index.html  login.html
tests/: __init__.py  tests_all.py
